/*
 * $Id: ChangeLog,v 1.736 2003/02/19 10:16:27 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-02-19 11:50 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/classes.c
  * source/vm/thread.c
  * include/hbstack.h
    ! Current selected method was stored in a static module variable.
      This practice was not thread safe, and I have moved the s_pMethod
      variable into the stack.
      THIS REQUIRE MAKE CLEAN IN ORDER TO WORK, or (probably) any
      application using classes could crash.


2003-02-19 11:15 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/hvm.c
    + Added LISP like array direct call to HB_ExecFromArray:
      HB_ExecFromArray( aArray )
      Where aArray must have one of the following formats:
      aArray := { @Func(), param1 .. paramN }
      aArray := { "FunctionName", param1 .. paramN }
      aArray := { oObject, "MethodName", param1 .. paramN }
      aArray := { oObject, nMethodID, param1 .. paramN }
      NOTE: HB_ExecFromArray() Returns the data returned by
      the called function or method.

  * tests/exec.prg
    + test to demonstrate this new features

2003-02-19 03:03 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * include/hbclass.ch
    * fixed AddClsMethod name typo
    + added automatic constructor call with parameters throught Class Name
      oMyClass := TClass( "par1", par2, ... )
      is the same of
      oMyClass := TClass():New( "par1", par2, ... )
    + added Class Methods definition, but not finished
    + added CONSTRUCTOR / DESTRUCTOR definitions
    + added OVERRIDE optional parameter to METHOD syntax, only as an explicit word
      to remember that a method will be overrided in this class
    + added DYNAMIC parameter like Delphi syntax. Equivalent to VIRTUAL parameter.
  * source/rtl/tclass.prg